rock-paper-scissors

--- a/index.html
+++ b/index.html
@@ -15,9 +15,31 @@
 <body>
     <div class="wrapper">
         <div class="scoreboard">
-            <div class="="></div>
+            <div class="title">
+                <img src="/image/title.png" alt="" srcset="">
+
+            </div>
+            <div class="score">
+              <p>Score</p>
+              <h1>0</h1>
+            </div>
 
         </div>
+        <div class="hands">
+            <div class="hovers paper">
+                <img src="/image/Paper.png" alt="" srcset="">
+
+            </div>
+            <div class="hovers scissors">
+                <img src="/image/Scissors.png" alt="" srcset="">
+
+            </div>
+            <div class="hovers rock">
+                <img src="/image/Rock.png" alt="" srcset="">
+
+            </div>
+        </div>
+        
 
     </div>
 
